# Blokus-RL

./: .gitignore  README.md  dockerfile  pyproject.toml  setup.py
.github/workflows/: analysis.yml
blokus_rl/: compare_arena.py  hparams.py  hparams_tuning.py  neural_network.py  train.py  tuning_hparams.py  utils.py
blokus_rl/alphazero/: __init__.py  arena.py  dataset.py  mcts.py  trainer.py
blokus_rl/blokus/: __init__.py  blokus_wrapper.py
blokus_rl/blokus/game/: __init__.py  blokus_game.py  board.py
blokus_rl/blokus/model/: blokus_nnet.py
blokus_rl/blokus/players/: __init__.py  player.py  user_player.py
blokus_rl/blokus/shapes/: __init__.py  shape.py  shapes.py
blokus_rl/colossumrl/: __init__.py  blokus_nnet.py  blokus_wrapper.py
blokus_rl/mcts/: __init__.py  arena.py  dataset.py  mcts.py  trainer.py
blokus_rl/models/: __init__.py  blokus_nnet.py  dumbnet.py
blokus_rl/players/: __init__.py  human_player.py  mcts_player.py  player.py  random_player.py
blokus_rl/ppo/: __init__.py  agent.py  memory.py  trainer.py
blokus_rl/stablebaseline/: __init__.py  sb_ppo.py
config/: alphazero_blokus_20x20.yml  blokus_hard.yml  blokus_simple.yml  cart_pole_params.yml  lunar_lander.yml  mcts_blokus.yml  ppo_blokus_7x7.yml  ppo_cart_pole.yml
docs/: README.md  abstract.md
src/: hparams.py  train.py  utils.py
src/notebooks/: blokus_board.ipynb
src/ppo/: agent.py  memory.py  trainer.py
