[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-many-arguments",
    "too-many-instance-attributes",
    "cell-var-from-loop",
    "invalid-name",
    "import-outside-toplevel",
    "c-extension-no-member",
    "too-many-locals",
    "too-few-public-methods",
    "not-callable",
]
generated-members=["numpy.*","torch.*"]
